# advent-of-code

./: .gitignore  Cargo.toml  README
2015/: Cargo.toml
2018/: .editorconfig  LICENSE  README.md
2019/: .gitignore  01.rs  02.rs  03.rs  04.rs  05.rs  07.rs  08.rs  09.rs  13.rs  23.rs  Cargo.toml  LICENSE  build.ninja  intcode.rs
2020/: .gitignore  02.rs  04.rs  08.rs  09.rs  Cargo.toml
2021/: Cargo.toml
2022/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  18.rs  Cargo.toml  template.rs  util.rs
2022/crates/day01/src/: main.rs
2022/crates/day02/src/: main.rs
2022/crates/day03/src/: main.rs
2022/crates/day04/: Cargo.toml
2022/crates/day04/src/: main.rs
2022/crates/day05/: Cargo.toml
2022/crates/day05/src/: main.rs
2022/crates/day06/src/: main.rs
2022/crates/day07/: Cargo.toml
2022/crates/day07/src/: main.rs
2022/crates/day08/: Cargo.toml
2022/crates/day08/src/: main.rs
2022/crates/day09/: Cargo.toml
2022/crates/day09/src/: main.rs
2022/crates/day10/: Cargo.toml
2022/crates/day10/src/: main.rs
2022/crates/day11/src/: main.rs
2022/crates/day12/: Cargo.toml
2022/crates/day12/src/: main.rs
2022/crates/day13/: Cargo.toml
2022/crates/day13/src/: main.rs
2022/crates/day14/: Cargo.toml
2022/crates/day14/src/: main.rs
2022/crates/day15/: Cargo.toml
2022/crates/day15/src/: main.rs
2022/crates/day18/: Cargo.toml
2022/crates/day18/src/: main.rs
2022/crates/util/: Cargo.toml
2022/crates/util/src/: lib.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs
(+215 files in other folders)
