[package]
name = "window"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.20.0", default-features = false }
softbuffer = { version = "0.4.6", default-features = false }
tiny-skia = { version = "0.11.4", default-features = false, features = ["std"] }
winit = { version = "0.30.5", default-features = false, features = ["rwh_06"] }
